# django-prod-app

./: .dockerignore  .env.template  .gitignore  Dockerfile  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
my_site/: .env.template  Dockerfile  config.py  db.sqlite3  devices.csv  docker-compose.yaml  manage.py  orders.csv  products-export (1).csv  products-export.csv  quieries.sql  requirements.txt
my_site/blogapp/: admin.py  apps.py  context_processors.py  models.py  sitemap.py  urls.py  views.py
my_site/blogapp/management/commands/: create_article.py
my_site/blogapp/migrations/: 0001_initial.py  0002_alter_article_options.py  0003_alter_article_title_alter_category_name_and_more.py  0004_alter_article_pub_date.py  0005_alter_article_pub_date.py
my_site/blogapp/templates/blogapp/: article_detail.html  article_list.html
my_site/database/: db.sqlite3
my_site/locale/en/LC_MESSAGES/: django.po
my_site/locale/ru/LC_MESSAGES/: django.po
my_site/my_site/: settings.py  sitemaps.py  urls.py
my_site/myapiapp/: serializers.py  urls.py  views.py
my_site/myauth/: context_processors.py  forms.py  models.py  sitemap.py  tests.py  urls.py  views.py
my_site/myauth/management/commands/: bind_user.py
my_site/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py
my_site/myauth/templates/myauth/: about_me.html  about_me_update.html  base.html  login.html  profile_detail.html  profile_list.html  register.html
my_site/requestdataapp/: forms.py  middlewares.py  urls.py  views.py
my_site/requestdataapp/templates/requestdataapp/: base.html  file-upload.html  request-query-params.html  user-bio-form.html
my_site/shop_app/: admin.py  admin_mixins.py  apps.py  common.py  context_processors.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  utils.py  views.py
my_site/shop_app/fixtures/: group_fixtures.json  order_fixtures.json  product_fixtures.json  product_fixtures.xml  user_fixtures.json
my_site/shop_app/management/commands/: agg.py  bulk_actions.py  create_one_order.py  create_order.py  create_products.py  (+2 more)
my_site/shop_app/migrations/: 0001_initial.py  0002_order.py  0003_order_user.py  0004_order_products.py  0005_alter_order_user.py  0006_product_created_by.py  0007_order_receipt.py  0008_product_preview.py  0009_productimage.py  0010_alter_order_options_alter_product_options_and_more.py  0011_alter_order_options_alter_product_options_and_more.py  0012_alter_order_receipt.py  0013_alter_order_delivery_address.py  0014_alter_order_delivery_address.py  0015_alter_product_description_alter_product_name.py
(+24 files in other folders)
