[tool.flake8]
# Flake8 settings (pip install Flake8-pyproject)
count = true
exclude = [".venv", ".git", "__pycache__", "build", "dist", "tests", "migrations", "*/tests.py"]
extend-ignore = ["E203", "W503", "F401", "D104"]
include = ["my_site/*.py"]
max-line-length = 120
per-file-ignores = ["__init__.py:F401,F403"]
python-version = "3.12"
# plugins = ["flake8-django"]

[tool.flake8.plugins]
django = "flake8_django:DjangoStyleChecker"

[tool.flake8-docstrings]
convention = "google" # or "numpy" or "pep257"

[tool.black]
# Black settings
exclude = ".venv"
include = "my_site/*.py"
line-length = 120
skip-string-normalization = true

[tool.isort]
# isort settings
combine_as_imports = true
default_section = "THIRDPARTY"
include_trailing_comma = true
known_first_party = ["my_site", "my_site.my_site", "my_site.myauth", "my_site.shop_app", "my_site.config"]
known_third_party = ["django", "sqlalchemy", "pydantic"]
line_length = 120
profile = "black"
skip = [".venv", ".git", "__pycache__"]

[tool.mypy]
exclude = ["tests", "__pycache__"]
files = ["my_site"]
ignore_missing_imports = true
python_version = "3.12"
strict = true
# либо установить pip install 'django-stubs[compatible-mypy]' для типов заглушек
mypy_path = "./my_site"
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "my_site.settings"
ignore_missing_model_attributes = true
strict_settings = true

[project]
name = "django-prod-app"
version = "0.1.0"
description = ""
authors = [
    {name = "yrmisi",email = "yrmisi@mail.ru"}
]
readme = "README.md"
requires-python = "3.13.2"
dependencies = [
    "django-debug-toolbar (>=5.0.1,<6.0.0)",
    "asgiref (>=3.8.1,<4.0.0)",
    "django (>=5.1.6,<6.0.0)",
    "sqlparse (>=0.5.3,<0.6.0)",
    "argon2-cffi (>=23.1.0,<24.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "faker (>=36.1.0,<37.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "django-filter (>=24.3,<25.0)",
    "mypy (>=1.15.0,<2.0.0)",
    "isort (>=6.0.0,<7.0.0)",
    "django-stubs (>=5.1.3,<6.0.0)",
    "docutils (>=0.21.2,<0.22.0)",
    "drf-spectacular (>=0.28.0,<0.29.0)",
    "sentry-sdk (>=2.21.0,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "flake8 (==6.0.0)",
    "flake8-docstrings (>=1.7.0,<2.0.0)",
    "flake8-pyproject (>=1.2.3,<2.0.0)",
    "flake8-django (>=1.4,<2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
